# bopthere

./: .env.example  .env.local.bak  .flake8  .gitignore  CLAUDE.md  CNAME  Makefile  README.md  check-deployment.sh  cors_test_results.json  eslint.config.js  index.html  jest.config.js  package-lock.json  package.json  pip.conf  playwright.config.ts  pyproject.toml  questionnaire_clustered.json  shredly_claude.md  svelte.config.js  tailwind.config.js  tailwind.config.ts  test-payload.json  tsconfig.json  vite.config.ts  vitest.config.ts  wesley_user_correct.json
.claude/: AWS_REGION_CONFIG.md  settings.json
data/: guest_list.json  itinerary.json  questionaire.json  questionnaire_clustering_with_outliers.json  sleeping.json
docs/: BINGO_DEPLOYMENT_GUIDE.md  LOGIN_DEPLOYMENT_GUIDE.md  aws-migration-summary.md  aws-setup.md  generate_ticket_rules.md  makefile-commands.md  message_to_guests  message_to_guests.md  navigation-button-fix-summary.md  navigation-debug-instructions.md  shedly_ticket_writer_example.md  test-implementation-summary.md  test_auth_handler.py  wedding_bingo_cards.md
infrastructure/: .terraformrc  api-gateway-auth.tf  api-gateway.tf  backend.tf  dynamodb-users.tf  dynamodb.tf  lambda-auth.tf  lambda.tf  main.tf  outputs.tf  providers.tf  tofu-wrapper.sh  variables.tf
public/: manifest.json  service-worker.js
scripts/: README.md  add-guest-ids.py  add-local-users.py  cleanup-test-data.py  db-audit.py  debug-leaderboard.sh  deploy-auth-api.sh  deploy-leaderboard-api.sh  deploy-leaderboard-lambda.sh  deploy-photos-api.sh  example-users.json  (+24 more)
(+350 files in other folders)
