[tool.poetry]
name = "heatherandwesley-wedding-app"
version = "0.1.0"
description = "Wedding app backend services and scripts"
authors = ["Wesley Beckner <wesley@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.14"
bcrypt = "^4.1.2"
PyJWT = "^2.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
seed-users = "scripts.seed_users:main"